[package]
name = "rustygit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.17", default-features = false, features = ['crossterm', 'serde'] }
crossterm = { version = "0.23", features = [ "serde" ] }
git2 = "0.14.1"
serde = "1.0"
